--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,8 @@
     -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
+  <!-- <link rel="stylesheet" href="../src/assets/styles/main.css">
+  <link rel="stylesheet" href="../src/assets/styles/responsive.css"> -->
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
